# ABTestBench

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
prompts/: benchmark_system.txt  judge_prompt.txt
questions/: ci_001.toml  ci_002.toml  ci_003.toml  confidence_intervals.yaml  effect_001.toml  effect_002.toml  effect_003.toml  effect_size.yaml  power_001.toml  power_002.toml  power_003.toml  power_analysis.yaml  sample_size.yaml  sample_size_001.toml  sample_size_002.toml  sample_size_003.toml  schema.json  sig_001.toml  sig_002.toml  sig_003.toml  significance.yaml
scripts/: run_benchmark.py
src/abtestbench/: __init__.py  config.py
src/abtestbench/evaluation/: __init__.py  composite.py  llm_judge.py  numeric.py
src/abtestbench/harness/: __init__.py  code_extractor.py  loader.py  runner.py
src/abtestbench/models/: __init__.py  question.py  response.py  result.py
src/abtestbench/providers/: __init__.py  openrouter.py
src/abtestbench/reporting/: __init__.py  formatters.py
src/abtestbench/sandbox/: __init__.py  docker_runner.py
src/abtestbench/tools/: __init__.py
